--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/shalini-s2001/">LinkedIn</a>
   <a class="footer-link" href="https://instagram.com/shals_luvly">Instagram</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <a class="footer-link" href="https://shalinisweety.github.io/My-site/">Website</a>
   <p class="copyright-msg">© 2022 shalini @ The Web Developer</p>
 </div>
   </body>
